# nextscope

./: LICENSE  README.md  api_hunter.py  crewlo-results.json  nextscope.py  pyproject.toml  results.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
